macro/src/snapshots/adze_macro__tests__enum_leaf_text_on_field.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub enum Token\n        {\n            #[adze::leaf(text = \"if\")] If, #[adze::leaf(text = \"else\")] Else,\n            Ident(#[adze::leaf(pattern = r\"[a-zA-Z_]\\w*\")] ()),\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub enum Token {
        If,
        Else,
        Ident(()),
    }
    impl ::adze::Extract<Token> for Token {
        type LeafFn = ();
        const GRAMMAR_NAME: &'static str = "test";
        #[allow(non_snake_case)]
        fn extract(
            node: Option<&::adze::pure_parser::ParsedNode>,
            source: &[u8],
            _last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for enum");
            fn unwrap_hidden_rules<'a>(
                node: &'a ::adze::pure_parser::ParsedNode,
            ) -> &'a ::adze::pure_parser::ParsedNode {
                if (node.kind().starts_with('_') || node.children.len() == 1)
                    && node.children.len() > 0
                {
                    return unwrap_hidden_rules(&node.children[0]);
                }
                node
            }
            let unwrapped_node = unwrap_hidden_rules(node);
            let non_extra_children: Vec<_> = unwrapped_node
                .children
                .iter()
                .filter(|c| !c.is_extra)
                .collect();
            if unwrapped_node.kind() == stringify!(Token) && non_extra_children.len() == 1 {
                let child_node = non_extra_children[0];
                return Self::extract(Some(child_node), source, _last_idx, _leaf_fn);
            }
            let node = unwrapped_node;
            if node.kind() == "Token_If" {
                return ::adze::__private::extract_struct_or_variant(
                    node,
                    move |cursor, last_idx| {
                        {
                            ::adze::__private::extract_field::<(), _>(
                                cursor, source, last_idx, "unit", None,
                            )
                        };
                        Token::If
                    },
                );
            }
            if node.kind() == "Token_Else" {
                return ::adze::__private::extract_struct_or_variant(
                    node,
                    move |cursor, last_idx| {
                        {
                            ::adze::__private::extract_field::<(), _>(
                                cursor, source, last_idx, "unit", None,
                            )
                        };
                        Token::Else
                    },
                );
            }
            if node.kind() == "Token_Ident" {
                return {
                    let value = <() as ::adze::Extract<_>>::extract(Some(node), source, 0, None);
                    Token::Ident(value)
                };
            }
            if unwrapped_node.children.is_empty() {
                let node = unwrapped_node;
            }
            panic ! ("Could not determine enum variant from tree structure: node kind='{}', symbol={}, child_count={}" , unwrapped_node . kind () , unwrapped_node . symbol , unwrapped_node . children . len ())
        }
    }
    include!(concat!(
        env!("OUT_DIR"),
        "/grammar_",
        "test",
        "/parser_",
        "test",
        ".rs"
    ));
    pub fn language() -> &'static ::adze::pure_parser::TSLanguage {
        &LANGUAGE
    }
    pub const LANGUAGE_REF: &'static ::adze::pure_parser::TSLanguage = &LANGUAGE;
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Token`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<Token, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<Token>(input, || language())
    }
}
